--- a/style.css
+++ b/style.css
@@ -62,23 +62,32 @@ li.spaced {
   margin-top: 8px;
 }
 
+@media screen and (max-width: 768px) {
+li.d-flex {margin-top:5px;}
+}
+
+ul {
+  list-style-type: none;
+}
+
+@media screen and (max-width: 768px) {
+ul {margin-block-end: 0em;}
+}
+
+
 .project-title {
   font-family: "Nunito Sans", sans-serif;
   font-size: 17px;
   margin: 8px 0 25px;
   display: inline-flex;
 }
+ 
 /*
-  .fa-solid {
-	height: 14px;
-	font-weight: 500;
-	opacity: 0.85;
-  }  */
-
 .grid {
   display: grid;
   grid-template-columns: 1fr 1fr;
-}
+}                           maybe scrap */
+
 /*--------------------------------------------------------------
   # Back to top button
   --------------------------------------------------------------*/
@@ -220,8 +229,8 @@ li.spaced {
 
 .navbar li {
   position: relative;
-  padding: 10px 0 10px 30px;
-}
+  padding: 10px 0 10px 30px;  
+}        /*this is not in the live but look later why*/
 
 .navbar a,
 .navbar a:focus {
@@ -571,6 +580,12 @@ section {
   overflow: hidden;
 }
 
+@media (max-width: 768px) {
+  section {
+    padding: 0px 0 10px;
+  }
+  }
+
 .banner {
   padding-top: 100px;
 }
@@ -649,7 +664,7 @@ section {
 }
 
 .banner h2 {
-  bottom: 42px;
+  bottom: 43px;
   font-size: 36px;
 }
 
@@ -664,14 +679,84 @@ section {
   opacity: 0.85;
 }
 
-@media (min-width: 1024px) {
-  .banner h1 {
+@media (max-width: 768px) {
+.ltgray  {
+  text-shadow: 9px 9px 11px rgba(0, 0, 0, .25);
+  bottom: 30px;
+  font-size: 30px; }
+}
+
+@media (min-width: 1024px) and (max-width: 1399px) {
+.banner h1 {
     font-size: 45px;
   }
-  .banner h2 {
+.banner h2 {
     font-size: 40px;
   }
 }
+
+@media (min-width: 1400px) and (max-width: 1515px) {
+.banner h1 {
+  font-size: 47px;
+  }
+.banner h2 {
+  font-size: 42px;
+  bottom: 92px;
+  }
+}
+
+@media (min-width: 1516px) and (max-width: 1620px) {
+
+  .banner h2 {
+    font-size: 44px;
+    bottom: 140px;
+    }
+  }
+
+@media (min-width: 1621px) {
+
+    .banner h2 {
+      font-size: 46px;
+      bottom: 210px;
+      }
+    }
+
+.not-top {
+  max-height:725px;
+}
+
+.img-fluid {
+  border-radius: 3px;
+}
+
+
+@media (max-width: 768px) {
+
+.img-fluid {
+  max-height: 283px;}
+
+.first {
+  margin-bottom: 45px;
+}
+.not-top {
+    max-height:280px;
+    padding-top: 0;
+    padding-left: .75rem;
+    padding-right: .75rem;
+  }
+.not-top img {
+  height: 100%;
+  width: auto !important;
+  overflow: hidden;}
+
+.mid img {
+  width: auto !important;
+}
+.proj {
+  margin-top:40px;
+}
+}
+
 
 /*--------------------------------------------------------------
   # About
@@ -682,11 +767,17 @@ section {
 }
 
 .green-title {
-  font-family: "Oxygen", sans-serif;
-  /*  color: #00a850; */
-  color: blue;
+  font-family: 'Oxygen', sans-serif;
+  color: #00a850;
   font-weight: 300;
-  font-size: 1.75rem;
+  font-size: 1.83rem;
+}
+@media (max-width: 768px) {
+  .green-title {
+    font-size: 2.1rem;
+    line-height: 2.53rem;
+    margin-bottom:17px;
+  }
 }
 
 .text-description {
@@ -695,20 +786,24 @@ section {
   line-height: 1.4;
 }
 
+
 .text-links {
-  text-transform: uppercase;
-  background-color: #e3e2dc;
+  text-transform: none;
+  background-color: #E3E2DC;
   color: #111;
-  font-family: "Nunito Sans", sans-serif;
-  font-size: 1.1rem;
+  font-family: 'Nunito Sans', sans-serif;
+  font-size: 1.4rem;
   padding: 3px 8px;
-  border: 0 !important;
+	border: 0 !important;
+  border-radius: 2px;
 }
 
 .text-links:hover {
   background-color: #f4f071;
   color: #111;
+  box-shadow: 0px 0 9px rgba(66, 66, 66, 0.12);
 }
+
 
 @media (max-width: 768px) {
   .about .content .learn-more-btn {
@@ -719,71 +814,213 @@ section {
 
 .lets-talk {
   background: #f7f7f7;
+  padding-top:20px;
+  padding-bottom:20px;
 }
 .lets-talk .contact {
-  font-family: "Oxygen", sans-serif;
-}
+
+  font-family: 'Oxygen', sans-serif;
+  }
 
 .lets-talk h2.title {
-  font-family: "Oxygen", sans-serif;
+  font-family: 'Oxygen', sans-serif;
   font-weight: bold;
   font-size: 2.4rem;
 }
+
+@media (max-width: 768px) {
+  .lets-talk h2.title {
+    font-size: 1.8rem;
+    margin-top: 0.5rem;
+  }
+}
+
 
 /*--------------------------------------------------------------
   S e r v i c e s
   --------------------------------------------------------------*/
 
+
+
 .service-grid {
-  display: grid;
-  width: 100%;
-  height: 510px;
-  background-image: url("../img/services/adst_318198163_construction.jpg");
-  margin: 0 auto;
-  padding: 0;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 240px 240px;
-  gap: 2rem;
+	display: grid;
+	width: 100%;
+	height: 510px;
+	background-image: url("../img/services/adst_318198163_construction.jpg");
+	margin: 0 auto;
+	padding: 0;
+	grid-template-columns: 1fr 1fr 1fr;
+	grid-template-rows: 260px 260px;
+	gap: 0rem;
+			}
+
+   /*   .service-grid {
+        display: grid;
+        width: 100%;
+        height: 510px;
+        background-image: url("assets/img/services/adst_318198163_construction.jpg");
+        margin: 3em auto 2em;
+        padding: 0;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows: 259px 259px;
+        gap: 0px;
+            } */
+
+
+.gridbox  {
+	display: block;
+	margin: 0;
+	padding: 0;
+	position: relative;
 }
 
-.gridbox {
-  display: block;
-  margin: 0;
-  padding: 0;
-  position: relative;
-}
-
-.s-type {
-  font-family: "Oxygen", sans-serif;
-  font-size: 1.3em;
-  font-weight: 500;
-  line-height: 1.3em;
-  color: #fff;
-  padding: 100px 20px 30px 20px;
-  float: left;
-  position: absolute;
-  box-shadow: 0px 0px 4px #999;
+.svcs {
+border: 14px #FFFFFF solid;
 }
 
 @media screen and (max-width: 768px) {
-  .banner {
-    height: 340px;
-  }
+  .service-grid {
+    display:block;
+    height: auto;
+    border: 1px #FFFFFF solid;
+/*    height: 1020px;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 200px 200px 200px;
+    gap: 1.8rem; */
+        }
 
-  .banner h1 {
-    font-size: 35px;
-    line-height: 42px;
-  }
-  .banner h2 {
-    font-size: 35px;
-    line-height: 42px;
-  }
-
-  button.owl-prev,
-  button.owl-nav {
-    display: none;
-  }
+.svcs {
+      height:205px;
+      margin-top:-3px;
+    }
 }
+
+.markets-grid {
+  display: grid;
+	width: 105%;
+	height: 280px;
+	margin: 1.5rem auto 0 -1.5rem;
+	padding: 0;
+	grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+	grid-template-rows: 210px;
+	gap: 0rem;
+}
+
+@media screen and (max-width: 768px) {
+  .markets-grid {
+    width: 105%;
+    height: auto;
+    max-height:900px;
+    margin: 1rem auto 0 -1rem;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 180px 180px 180px 180px;
+    gap: 2px;
+        }
+}
+
+
+.mkts {
+border: 0;
+}
+
+.gridbox img {
+  width:108%;
+  height: auto;
+}
+
+.s-type {
+	font-family: 'Oxygen', sans-serif;
+	font-size: 2.1em;
+    font-weight: 600;
+    line-height: 1.3em;
+    color: #fff;
+	padding: 100px 20px 20px 40px;
+	float: left;
+	position: absolute;
+  /* box-shadow: 0px 0px 4px #999; */
+}
+
+@media screen and (max-width: 768px) {
+  .s-type {
+    font-size: 1.8em;
+    padding: 60px 20px 20px 40px;
+}
+}
+
+
+
+/*--------------------------------------------------------------
+C o n t a c t      /  m i s c
+--------------------------------------------------------------*/
+
+
+
+input#name {
+  margin-top:6px;
+  min-width: 300px;}
+input#email {
+  margin-top:6px;
+  min-width: 300px;}
+textarea#message {
+  margin-top:6px;
+  width: 90%;}
+
+@media screen and (max-width: 768px) {
+
+  textarea#message {width: 70%;}
+}
+
+.contact-upper-img {
+  display: block;
+  float:right;
+    width:40%;
+  }
+
+.contact-low-img {
+  display: none;
+}
+
+@media screen and (max-width: 768px) {
+.contact-upper-img {
+  display: none;}
+
+.contact-low-img {
+  display: block;
+  padding-bottom: 0;
+}
+}
+
+@media screen and (max-width: 768px) {
+
+.banner {
+	height: 310px;
+}
+
+
+.no-photo {
+  max-height:150px;
+}
+
+.banner h1 {
+    font-size: 35px;
+	line-height: 42px;
+  }
+.banner h2 {
+    font-size: 35px;
+	line-height: 42px;
+  bottom: 32px;
+  }
+
+button.owl-prev,  button.owl-nav {
+	display: none;
+	}
+.mob-collapse {
+  height:0;
+}
+
+}
+
+
 
 /*--------------------------------------------------------------
   # Footer
@@ -798,15 +1035,17 @@ section {
 }
 
 #footer .inc {
-  font-family: "Oxygen", sans-serif;
+  font-family: 'Oxygen', sans-serif;
   font-weight: bold;
   align-self: center;
 }
 
 #footer .small {
-  font-family: "Nunito Sans", sans-serif;
+  font-family: 'Nunito Sans', sans-serif;
   align-self: flex-end;
 }
+
+
 
 .lightbox-pop {
   border: 2px #fff solid;
