mobile nav + contact image tweaks

--- a/style.css
+++ b/style.css
@@ -63,7 +63,9 @@ li.spaced {
 }
 
 @media screen and (max-width: 768px) {
-li.d-flex {margin-top:5px;}
+  li.d-flex {
+    margin-top: 5px;
+  }
 }
 
 ul {
@@ -71,9 +73,10 @@ ul {
 }
 
 @media screen and (max-width: 768px) {
-ul {margin-block-end: 0em;}
+  ul {
+    margin-block-end: 0em;
+  }
 }
-
 
 .project-title {
   font-family: "Nunito Sans", sans-serif;
@@ -81,7 +84,7 @@ ul {margin-block-end: 0em;}
   margin: 8px 0 25px;
   display: inline-flex;
 }
- 
+
 /*
 .grid {
   display: grid;
@@ -229,8 +232,8 @@ ul {margin-block-end: 0em;}
 
 .navbar li {
   position: relative;
-  padding: 10px 0 10px 30px;  
-}        /*this is not in the live but look later why*/
+  padding: 10px 0 10px 30px;
+} /*this is not in the live but look later why*/
 
 .navbar a,
 .navbar a:focus {
@@ -325,6 +328,10 @@ ul {margin-block-end: 0em;}
   visibility: visible;
 }
 
+.navbar .icons a {
+  border: none !important;
+}
+
 @media (max-width: 1366px) {
   .navbar .dropdown .dropdown ul {
     left: -90%;
@@ -380,7 +387,9 @@ ul {margin-block-end: 0em;}
 }
 
 .navbar-mobile ul {
-  display: block;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
   position: absolute;
   top: 55px;
   right: 15px;
@@ -396,7 +405,7 @@ ul {margin-block-end: 0em;}
 
 .navbar-mobile a,
 .navbar-mobile a:focus {
-  padding: 10px 20px;
+  padding: 0;
   font-size: 15px;
   color: #37423b;
 }
@@ -584,7 +593,7 @@ section {
   section {
     padding: 0px 0 10px;
   }
-  }
+}
 
 .banner {
   padding-top: 100px;
@@ -680,83 +689,81 @@ section {
 }
 
 @media (max-width: 768px) {
-.ltgray  {
-  text-shadow: 9px 9px 11px rgba(0, 0, 0, .25);
-  bottom: 30px;
-  font-size: 30px; }
+  .ltgray {
+    text-shadow: 9px 9px 11px rgba(0, 0, 0, 0.25);
+    bottom: 30px;
+    font-size: 30px;
+  }
 }
 
 @media (min-width: 1024px) and (max-width: 1399px) {
-.banner h1 {
+  .banner h1 {
     font-size: 45px;
   }
-.banner h2 {
+  .banner h2 {
     font-size: 40px;
   }
 }
 
 @media (min-width: 1400px) and (max-width: 1515px) {
-.banner h1 {
-  font-size: 47px;
+  .banner h1 {
+    font-size: 47px;
   }
-.banner h2 {
-  font-size: 42px;
-  bottom: 92px;
+  .banner h2 {
+    font-size: 42px;
+    bottom: 92px;
   }
 }
 
 @media (min-width: 1516px) and (max-width: 1620px) {
-
   .banner h2 {
     font-size: 44px;
     bottom: 140px;
-    }
   }
+}
 
 @media (min-width: 1621px) {
-
-    .banner h2 {
-      font-size: 46px;
-      bottom: 210px;
-      }
-    }
+  .banner h2 {
+    font-size: 46px;
+    bottom: 210px;
+  }
+}
 
 .not-top {
-  max-height:725px;
+  max-height: 725px;
 }
 
 .img-fluid {
   border-radius: 3px;
 }
 
-
 @media (max-width: 768px) {
-
-.img-fluid {
-  max-height: 283px;}
-
-.first {
-  margin-bottom: 45px;
-}
-.not-top {
-    max-height:280px;
-    padding-top: 0;
-    padding-left: .75rem;
-    padding-right: .75rem;
+  .img-fluid {
+    max-height: 283px;
   }
-.not-top img {
-  height: 100%;
-  width: auto !important;
-  overflow: hidden;}
 
-.mid img {
-  width: auto !important;
-}
-.proj {
-  margin-top:40px;
-}
-}
+  .first {
+    margin-bottom: 45px;
+  }
+  .not-top {
+    max-height: 280px;
+    padding-top: 0;
+    padding-left: 0.75rem;
+    padding-right: 0.75rem;
+  }
+  .not-top img {
+    height: 100%;
+    width: auto !important;
+    overflow: hidden;
+  }
 
+  .mid img {
+    width: auto !important;
+  }
+  .proj {
+    margin-top: 40px;
+  }
+}
 
 /*--------------------------------------------------------------
   # About
@@ -767,7 +774,7 @@ section {
 }
 
 .green-title {
-  font-family: 'Oxygen', sans-serif;
+  font-family: "Oxygen", sans-serif;
   color: #00a850;
   font-weight: 300;
   font-size: 1.83rem;
@@ -776,7 +783,7 @@ section {
   .green-title {
     font-size: 2.1rem;
     line-height: 2.53rem;
-    margin-bottom:17px;
+    margin-bottom: 17px;
   }
 }
 
@@ -786,15 +793,14 @@ section {
   line-height: 1.4;
 }
 
-
 .text-links {
   text-transform: none;
-  background-color: #E3E2DC;
+  background-color: #e3e2dc;
   color: #111;
-  font-family: 'Nunito Sans', sans-serif;
+  font-family: "Nunito Sans", sans-serif;
   font-size: 1.4rem;
   padding: 3px 8px;
-	border: 0 !important;
+  border: 0 !important;
   border-radius: 2px;
 }
 
@@ -803,7 +809,6 @@ section {
   color: #111;
   box-shadow: 0px 0 9px rgba(66, 66, 66, 0.12);
 }
-
 
 @media (max-width: 768px) {
   .about .content .learn-more-btn {
@@ -814,16 +819,15 @@ section {
 
 .lets-talk {
   background: #f7f7f7;
-  padding-top:20px;
-  padding-bottom:20px;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 .lets-talk .contact {
-
-  font-family: 'Oxygen', sans-serif;
-  }
+  font-family: "Oxygen", sans-serif;
+}
 
 .lets-talk h2.title {
-  font-family: 'Oxygen', sans-serif;
+  font-family: "Oxygen", sans-serif;
   font-weight: bold;
   font-size: 2.4rem;
 }
@@ -835,26 +839,23 @@ section {
   }
 }
 
-
 /*--------------------------------------------------------------
   S e r v i c e s
   --------------------------------------------------------------*/
 
-
-
 .service-grid {
-	display: grid;
-	width: 100%;
-	height: 510px;
-	background-image: url("../img/services/adst_318198163_construction.jpg");
-	margin: 0 auto;
-	padding: 0;
-	grid-template-columns: 1fr 1fr 1fr;
-	grid-template-rows: 260px 260px;
-	gap: 0rem;
-			}
+  display: grid;
+  width: 100%;
+  height: 510px;
+  background-image: url("../img/services/adst_318198163_construction.jpg");
+  margin: 0 auto;
+  padding: 0;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 260px 260px;
+  gap: 0rem;
+}
 
-   /*   .service-grid {
+/*   .service-grid {
         display: grid;
         width: 100%;
         height: 510px;
@@ -866,77 +867,75 @@ section {
         gap: 0px;
             } */
 
-
-.gridbox  {
-	display: block;
-	margin: 0;
-	padding: 0;
-	position: relative;
+.gridbox {
+  display: block;
+  margin: 0;
+  padding: 0;
+  position: relative;
 }
 
 .svcs {
-border: 14px #FFFFFF solid;
+  border: 14px #ffffff solid;
 }
 
 @media screen and (max-width: 768px) {
   .service-grid {
-    display:block;
+    display: block;
     height: auto;
-    border: 1px #FFFFFF solid;
-/*    height: 1020px;
+    border: 1px #ffffff solid;
+    /*    height: 1020px;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 200px 200px 200px;
     gap: 1.8rem; */
-        }
+  }
 
-.svcs {
-      height:205px;
-      margin-top:-3px;
-    }
+  .svcs {
+    height: 205px;
+    margin-top: -3px;
+  }
 }
 
 .markets-grid {
   display: grid;
-	width: 105%;
-	height: 280px;
-	margin: 1.5rem auto 0 -1.5rem;
-	padding: 0;
-	grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-	grid-template-rows: 210px;
-	gap: 0rem;
+  width: 105%;
+  height: 280px;
+  margin: 1.5rem auto 0 -1.5rem;
+  padding: 0;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+  grid-template-rows: 210px;
+  gap: 0rem;
 }
 
 @media screen and (max-width: 768px) {
   .markets-grid {
     width: 105%;
     height: auto;
-    max-height:900px;
+    max-height: 900px;
     margin: 1rem auto 0 -1rem;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 180px 180px 180px 180px;
     gap: 2px;
-        }
+  }
 }
 
-
 .mkts {
-border: 0;
+  border: 0;
 }
 
 .gridbox img {
-  width:108%;
+  width: 108%;
   height: auto;
 }
 
 .s-type {
-	font-family: 'Oxygen', sans-serif;
-	font-size: 2.1em;
-    font-weight: 600;
-    line-height: 1.3em;
-    color: #fff;
-	padding: 100px 20px 20px 40px;
-	float: left;
-	position: absolute;
+  font-family: "Oxygen", sans-serif;
+  font-size: 2.1em;
+  font-weight: 600;
+  line-height: 1.3em;
+  color: #fff;
+  padding: 100px 20px 20px 40px;
+  float: left;
+  position: absolute;
   /* box-shadow: 0px 0px 4px #999; */
 }
 
@@ -944,83 +943,80 @@ border: 0;
   .s-type {
     font-size: 1.8em;
     padding: 60px 20px 20px 40px;
+  }
 }
-}
-
-
 
 /*--------------------------------------------------------------
 C o n t a c t      /  m i s c
 --------------------------------------------------------------*/
 
-
-
 input#name {
-  margin-top:6px;
-  min-width: 300px;}
+  margin-top: 6px;
+  min-width: 300px;
+}
 input#email {
-  margin-top:6px;
-  min-width: 300px;}
+  margin-top: 6px;
+  min-width: 300px;
+}
 textarea#message {
-  margin-top:6px;
-  width: 90%;}
+  margin-top: 6px;
+  width: 90%;
+}
 
 @media screen and (max-width: 768px) {
-
-  textarea#message {width: 70%;}
+  textarea#message {
+    width: 70%;
+  }
 }
 
 .contact-upper-img {
   display: block;
-  float:right;
-    width:40%;
-  }
+  float: right;
+  width: 40%;
+}
 
 .contact-low-img {
   display: none;
 }
 
 @media screen and (max-width: 768px) {
-.contact-upper-img {
-  display: none;}
+  .contact-upper-img {
+    display: none;
+  }
 
-.contact-low-img {
-  display: block;
-  padding-bottom: 0;
-}
+  .contact-low-img {
+    display: block;
+    padding-bottom: 0;
+  }
 }
 
 @media screen and (max-width: 768px) {
-
-.banner {
-	height: 310px;
-}
-
-
-.no-photo {
-  max-height:150px;
-}
-
-.banner h1 {
-    font-size: 35px;
-	line-height: 42px;
-  }
-.banner h2 {
-    font-size: 35px;
-	line-height: 42px;
-  bottom: 32px;
+  .banner {
+    height: 310px;
   }
 
-button.owl-prev,  button.owl-nav {
-	display: none;
-	}
-.mob-collapse {
-  height:0;
+  .no-photo {
+    max-height: 150px;
+  }
+
+  .banner h1 {
+    font-size: 35px;
+    line-height: 42px;
+  }
+  .banner h2 {
+    font-size: 35px;
+    line-height: 42px;
+    bottom: 32px;
+  }
+
+  button.owl-prev,
+  button.owl-nav {
+    display: none;
+  }
+  .mob-collapse {
+    height: 0;
+  }
 }
-
-}
-
-
 
 /*--------------------------------------------------------------
   # Footer
@@ -1035,17 +1031,15 @@ button.owl-prev,  button.owl-nav {
 }
 
 #footer .inc {
-  font-family: 'Oxygen', sans-serif;
+  font-family: "Oxygen", sans-serif;
   font-weight: bold;
   align-self: center;
 }
 
 #footer .small {
-  font-family: 'Nunito Sans', sans-serif;
+  font-family: "Nunito Sans", sans-serif;
   align-self: flex-end;
 }
-
-
 
 .lightbox-pop {
   border: 2px #fff solid;
