grid, acf support for icons

--- a/style.css
+++ b/style.css
@@ -85,11 +85,16 @@ ul {
   display: inline-flex;
 }
 
-/*
 .grid {
   display: grid;
   grid-template-columns: 1fr 1fr;
-}                           maybe scrap */
+}
+
+@media screen and (max-width: 768px) {
+  .grid {
+    grid-template-columns: 1fr;
+  }
+}
 
 /*--------------------------------------------------------------
   # Back to top button
@@ -847,25 +852,13 @@ section {
   display: grid;
   width: 100%;
   height: 510px;
-  background-image: url("../img/services/adst_318198163_construction.jpg");
-  margin: 0 auto;
+  background-image: var(--data-attr-bg);
+  margin: 3em auto 2em;
   padding: 0;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 260px 260px;
-  gap: 0rem;
+  grid-template-rows: 259px 259px;
+  gap: 0px;
 }
-
-/*   .service-grid {
-        display: grid;
-        width: 100%;
-        height: 510px;
-        background-image: url("assets/img/services/adst_318198163_construction.jpg");
-        margin: 3em auto 2em;
-        padding: 0;
-        grid-template-columns: 1fr 1fr 1fr;
-        grid-template-rows: 259px 259px;
-        gap: 0px;
-            } */
 
 .gridbox {
   display: block;
@@ -1101,24 +1094,13 @@ body.page-template-page-services #header {
   background-color: #f0efec;
 }
 
-body.page-template-page-services .service-grid {
-  display: grid;
-  width: 100%;
-  height: 510px;
-  background-image: var(--data-attr-bg);
-  margin: 3em auto 2em;
-  padding: 0;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 259px 259px;
-  gap: 0px;
-}
-body.page-template-page-services .gridbox {
+/* body.page-template-page-services .gridbox {
   display: block;
   margin: 0;
   border: 14px #ffffff solid;
   padding: 0;
   position: relative;
-}
+} 
 
 body.page-template-page-services .s-type {
   font-family: "Oxygen", sans-serif;
@@ -1129,7 +1111,7 @@ body.page-template-page-services .s-type {
   padding: 100px 20px 30px 40px;
   float: left;
   position: absolute;
-}
+}*/
 
 body.page-template-page-services ul {
   list-style-type: none;
